fixed package issues.

--- a/app/src/main/res/layout/activity_article_list.xml
+++ b/app/src/main/res/layout/activity_article_list.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.monzo.androidtest.articles.ui.list.ArticlesViewModel" />
+            type="com.monzo.articles.ui.list.ArticlesViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
