--- a/app/src/main/res/layout/item_article_detail.xml
+++ b/app/src/main/res/layout/item_article_detail.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.monzo.androidtest.articles.ui.detail.ArticleDetailItemViewModel" />
+            type="com.monzo.articles.ui.detail.ArticleDetailItemViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
