--- a/app/src/main/res/layout/activity_articlet_detail.xml
+++ b/app/src/main/res/layout/activity_articlet_detail.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.monzo.androidtest.articles.ui.detail.ArticleDetailViewModel" />
+            type="com.monzo.articles.ui.detail.ArticleDetailViewModel" />
     </data>
 
     <LinearLayout
