--- a/app/src/main/res/layout/list_item_article.xml
+++ b/app/src/main/res/layout/list_item_article.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.monzo.androidtest.articles.ui.list.ArticleItemViewModel" />
+            type="com.monzo.articles.ui.list.ArticleItemViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
